removal of extraneous whitespace, added extra image and completed image alt tags correctly.

--- a/assets/scss/variables/_lato.scss
+++ b/assets/scss/variables/_lato.scss
@@ -20,7 +20,8 @@ body {
 }
 
 h1 {
-  margin: 0; padding: 0 0 $leading*2 0;
+  margin: 0;
+  padding: 0 0 $leading*2 0;
   font-size: 32px;
   font-weight: $boldweight;
   line-height: $leading*3;
@@ -33,7 +34,8 @@ h1 {
 }
 
 h2 {
-  margin: 0; padding: 0 0 $leading*2 0;
+  margin: 0;
+  padding: 0 0 $leading*2 0;
   font-size: 26px;
   font-weight: $boldweight;
   line-height: $leading*3;
@@ -51,7 +53,8 @@ h2.on-white
 }
 
 h3 {
-  margin: 0; padding: 0 0 $leading*2 0;
+  margin: 0;
+  padding: 0 0 $leading*2 0;
   font-size: 20px;
   font-weight: $boldweight;
   line-height: $leading*2;
@@ -63,7 +66,8 @@ h3 {
 }
 
 h4 {
-  margin: 0; padding: 0 0 $leading 0;
+  margin: 0;
+  padding: 0 0 $leading 0;
   font-size: $body;
   font-weight: $boldweight;
   line-height: $leading*2;
@@ -78,7 +82,8 @@ p{
 }
 
 p.lede{
-  margin: 0; padding: 0 0 $leading*2 0;
+  margin: 0;
+  padding: 0 0 $leading*2 0;
   font-size: 20px;
   letter-spacing: 0.016em;
   line-height: $leading*2.5;
@@ -97,7 +102,6 @@ p.lede{
   letter-spacing: 0.049em;
 }
 
-.callout h3
-{
+.callout h3 {
   letter-spacing: 0.038em;
 }
